--- a/tarneeb/src/view/component/MainPage/MainPage.css
+++ b/tarneeb/src/view/component/MainPage/MainPage.css
@@ -1,5 +1,5 @@
 .MainPage__page {
-  width: 90%;
+  width: 96vw;
   margin: auto;
   background-color: #fefbd8;
   height: 90vh;
@@ -9,15 +9,19 @@
   color: white;
   font-family: "Courier New", Courier, monospace;
   font-size: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .MainPage__page h1 img {
-  width: 5%;
-  height: 5%;
+  width: 2%;
+  height: 2%;
+  margin-left: 3%;
 }
 
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 420px) {
   .MainPage__page h1 img {
-    width: 20%;
-    height: 20%;
+    width: 14%;
+    height: 14%;
   }
 }
