--- a/tarneeb/src/view/component/Tarneeb/Tarneeb.css
+++ b/tarneeb/src/view/component/Tarneeb/Tarneeb.css
@@ -18,7 +18,39 @@
   height: 2%;
   margin-left: 3%;
 }
-
+.tarneeb__app {
+  width: 85%;
+  border: 1px solid black;
+  display: flex;
+  margin: auto;
+  margin-top: 1.5%;
+}
+.tarneeb__room {
+  width: 55%;
+  border: 1px solid red;
+}
+.room_player {
+  width: 12%;
+  margin: auto;
+  border-radius: 40% 40% 0% 0%;
+  margin-top: 1%;
+  cursor: pointer;
+}
+.room_player:hover {
+  -webkit-box-shadow: 7px 11px 33px 3px rgba(0, 0, 0, 0.63);
+  -moz-box-shadow: 7px 11px 33px 3px rgba(0, 0, 0, 0.63);
+  box-shadow: 7px 11px 33px 3px rgba(0, 0, 0, 0.63);
+}
+.room_player img {
+  width: 100%;
+  margin: auto;
+  margin: auto;
+  border-radius: 40% 40% 0% 0%;
+}
+.room_player h3 {
+  margin-left: 5%;
+  color: #80ced6;
+}
 @media only screen and (max-width: 420px) {
   .tarneeb__page {
     min-width: 89vw;
