--- a/tarneeb/src/view/component/Tarneeb/Tarneeb.css
+++ b/tarneeb/src/view/component/Tarneeb/Tarneeb.css
@@ -20,7 +20,7 @@
 }
 .tarneeb__app {
   width: 85%;
-  border: 1px solid black;
+
   display: flex;
   margin: auto;
   margin-top: 1.5%;
@@ -59,7 +59,24 @@
 .room__player-table .room_player {
   margin: auto;
 }
+.tarneeb__table {
+  width: 52%;
+  background-color: #fefbd8;
+  -webkit-box-shadow: 7px 11px 33px 3px rgba(0, 0, 0, 0.63);
+  -moz-box-shadow: 7px 11px 33px 3px rgba(0, 0, 0, 0.63);
+  box-shadow: 7px 11px 33px 3px rgba(0, 0, 0, 0.63);
+}
+.table__playerName {
+  display: flex;
+  margin: auto;
+  background-color: #80ced6;
+}
+.playr-col {
+  color: white;
+  font-size: 20px;
 
+  margin: auto;
+}
 @media only screen and (max-width: 420px) {
   .tarneeb__page {
     min-width: 89vw;
